<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Events</class>
 <widget class="QFrame" name="Events">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>687</width>
    <height>408</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Frame</string>
  </property>
  <layout class="QHBoxLayout" name="EventsLayout">
   <property name="spacing">
    <number>0</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QFrame" name="frame">
     <layout class="QHBoxLayout" name="_2">
      <property name="spacing">
       <number>0</number>
      </property>
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QToolBox" name="toolBox">
        <property name="font">
         <font>
          <pointsize>10</pointsize>
          <weight>75</weight>
          <bold>true</bold>
          <underline>false</underline>
          <strikeout>false</strikeout>
          <stylestrategy>PreferDefault</stylestrategy>
          <kerning>false</kerning>
         </font>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Plain</enum>
        </property>
        <property name="currentIndex">
         <number>0</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
        </property>
        <widget class="QWidget" name="widget_5">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>687</width>
           <height>288</height>
          </rect>
         </property>
         <attribute name="icon">
          <iconset>
           <normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</iconset>
         </attribute>
         <attribute name="label">
          <string>Today</string>
         </attribute>
         <layout class="QGridLayout">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <property name="spacing">
           <number>0</number>
          </property>
          <item row="0" column="0">
           <widget class="QScrollArea" name="scrollArea">
            <property name="font">
             <font>
              <stylestrategy>PreferDefault</stylestrategy>
             </font>
            </property>
            <property name="verticalScrollBarPolicy">
             <enum>Qt::ScrollBarAlwaysOff</enum>
            </property>
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="scrollAreaWidgetContents_2">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>685</width>
               <height>286</height>
              </rect>
             </property>
             <property name="font">
              <font>
               <stylestrategy>NoAntialias</stylestrategy>
              </font>
             </property>
             <layout class="QHBoxLayout" name="today_event_wrapper">
              <property name="leftMargin">
               <number>5</number>
              </property>
              <property name="topMargin">
               <number>5</number>
              </property>
              <property name="rightMargin">
               <number>5</number>
              </property>
              <property name="bottomMargin">
               <number>5</number>
              </property>
             </layout>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
        <widget class="QWidget" name="widget_4">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>687</width>
           <height>288</height>
          </rect>
         </property>
         <attribute name="icon">
          <iconset>
           <normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</iconset>
         </attribute>
         <attribute name="label">
          <string>Tomorrow</string>
         </attribute>
         <layout class="QGridLayout" name="gridLayout_7">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <property name="spacing">
           <number>0</number>
          </property>
          <item row="0" column="0">
           <widget class="QScrollArea" name="scrollArea_3">
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="widget_6">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>685</width>
               <height>286</height>
              </rect>
             </property>
             <layout class="QHBoxLayout" name="tomorrow_event_wrapper">
              <property name="leftMargin">
               <number>5</number>
              </property>
              <property name="topMargin">
               <number>5</number>
              </property>
              <property name="rightMargin">
               <number>5</number>
              </property>
              <property name="bottomMargin">
               <number>5</number>
              </property>
             </layout>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
        <widget class="QWidget" name="widget_3">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>687</width>
           <height>288</height>
          </rect>
         </property>
         <attribute name="icon">
          <iconset>
           <normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</iconset>
         </attribute>
         <attribute name="label">
          <string>This Weekend</string>
         </attribute>
         <layout class="QGridLayout" name="gridLayout_10">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <property name="spacing">
           <number>0</number>
          </property>
          <item row="0" column="0">
           <widget class="QScrollArea" name="scrollArea_4">
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="widget_7">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>685</width>
               <height>286</height>
              </rect>
             </property>
             <layout class="QHBoxLayout" name="thisweekend_event_wrapper">
              <property name="leftMargin">
               <number>5</number>
              </property>
              <property name="topMargin">
               <number>5</number>
              </property>
              <property name="rightMargin">
               <number>5</number>
              </property>
              <property name="bottomMargin">
               <number>5</number>
              </property>
             </layout>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
        <widget class="QWidget" name="widget_2">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>687</width>
           <height>288</height>
          </rect>
         </property>
         <attribute name="icon">
          <iconset>
           <normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</normaloff>C:/Users/admin/Desktop/img/icons/election-event-on-a-calendar-with-star-symbol.png</iconset>
         </attribute>
         <attribute name="label">
          <string>Next Weekend</string>
         </attribute>
         <layout class="QGridLayout" name="gridLayout_12">
          <property name="leftMargin">
           <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
          <property name="spacing">
           <number>0</number>
          </property>
          <item row="0" column="0">
           <widget class="QScrollArea" name="scrollArea_5">
            <property name="widgetResizable">
             <bool>true</bool>
            </property>
            <widget class="QWidget" name="widget_8">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>685</width>
               <height>286</height>
              </rect>
             </property>
             <layout class="QHBoxLayout" name="nextweekend_event_wrapper">
              <property name="leftMargin">
               <number>5</number>
              </property>
              <property name="topMargin">
               <number>5</number>
              </property>
              <property name="rightMargin">
               <number>5</number>
              </property>
              <property name="bottomMargin">
               <number>5</number>
              </property>
             </layout>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
